<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaltyContacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_contact">Add contact</string>
    <string name="title_activity_contact_edition">ContactEdition</string>

    <string name="action_import_contacts">Import contacts</string>

    <string name="loading_from_contacts">Importing contacts... This may take a while.</string>



    <!-- Contact Show ACTIVITY -->
    <string name="contact_show_title">Contact informations</string>
    <string name="postal_address_label">Postal address</string>
    <string name="phone_numbers_label">Phone number(s)</string>
    <string name="email_address_label">Email(s)</string>
    <string name="email_call_message">Choose an Email client :</string>
    <!-- EDITION ACTIVITY -->
    <string name="edition_title">Contact edition</string>
    <string name="firstname_label">Firstname</string>
    <string name="lastname_label">Lastname</string>
    <string name="address_label">Address</string>
    <string name="error_name_empty">Enter a name for this contact.</string>
    <string name="default_phone_tag">Mobile</string>
    <string name="default_email_tag">Personal</string>
    <string name="delete_confirm_message">Are you sure you want do delete this contact ?</string>
    <string name="delete_confirm_positive">Yes</string>
    <string name="delete_confirm_negative">No</string>
    <string name="edit_mail_phone_hint">Tap to edit</string>
    <string name="picture_get_question">How do you want to get your picture ?</string>
    <string name="picture_from_gallery_response">Gallery</string>
    <string name="picture_from_camera_response">Camera</string>

    <!-- STANDARD ACTIONS -->
    <string name="action_edit">Save</string>
    <string name="action_save">Save</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>


    <!-- TAG DIALOG -->
    <string name="tag_input">Enter a custom tag</string>
</resources>
