<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactEdition"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edition_title"
            android:textSize="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/edition_user_image_button"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/firstname_label" />

            <EditText
                android:id="@+id/edition_firstname_input"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/lastname_label" />

            <EditText
                android:id="@+id/edition_lastname_input"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/address_label" />

            <EditText
                android:id="@+id/edition_address_input"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Phone numbers" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/edition_phone_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                >

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edition_add_phone_button"
            android:src="@android:drawable/ic_menu_add"
            android:layout_gravity="right" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/edition_save_button"
            android:layout_gravity="right" />


    </LinearLayout>
</ScrollView>
